--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "@google-cloud/bigquery": "^7.5.2",
-    "cors": "^2.8.5"
+    "@google/generative-ai": "^0.6.0",
+    "@langchain/google-genai": "^0.0.11",
+    "dotenv": "^16.4.5"
   }
 }
