--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@clayui/form": "^3.113.0",
     "@clayui/icon": "^3.111.0",
     "@clayui/loading-indicator": "^3.111.0",
+    "@clayui/modal": "^3.113.0",
     "@clayui/panel": "^3.113.0",
+    "@clayui/toolbar": "^3.113.0",
     "@google-cloud/bigquery": "^7.5.2",
     "@google/generative-ai": "^0.6.0",
     "@langchain/google-genai": "^0.0.11",
