--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@clayui/modal": "^3.113.0",
     "@clayui/panel": "^3.113.0",
     "@clayui/toolbar": "^3.113.0",
+    "@clayui/tooltip": "^3.113.0",
     "@google-cloud/bigquery": "^7.5.2",
     "@google/generative-ai": "^0.6.0",
     "@langchain/google-genai": "^0.0.11",
